--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -6,6 +6,7 @@
 @import "verify_webrtc.less";
 @import "public/assets/icon_font/icons.less";
 @import "skype_clone.less";
+@import "modal_overlay.less";
 
 .text-center {
     text-align: center;
