--- a/app/styles/chat.less
+++ b/app/styles/chat.less
@@ -1,3 +1,24 @@
+video {
+    display: none;
+}
+
 .chat-window {
-    
+    border: 1px solid black;
+    margin: 20px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.chat-window-settings {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    .ii-settings {
+        font-size: 32px;
+        cursor: pointer;
+    }
 }
