--- a/app/styles/skype_clone.less
+++ b/app/styles/skype_clone.less
@@ -242,7 +242,9 @@ h1 img {
     top: 60px;
 }
 
-.users-container, .settings-panel {
+.users-container
+// , .settings-panel 
+{
     margin: 0 0 13px 0;
     border: 1px solid black;
     overflow: hidden;
@@ -264,19 +266,19 @@ h1 img {
     overflow: hidden;
 }
 
-.settings {
-    position: absolute;
-    top: 33px;
-    right: 210px;
-}
+// .settings {
+//     position: absolute;
+//     top: 33px;
+//     right: 210px;
+// }
 
-#settings {
-    background-repeat: no-repeat;
-    background-position: center right;
-    background-image: url('images/settings.png');
-    padding-right: 35px;
-    margin-top: -1px;
-}
+// #settings {
+//     background-repeat: no-repeat;
+//     background-position: center right;
+//     background-image: url('images/settings.png');
+//     padding-right: 35px;
+//     margin-top: -1px;
+// }
 
 #save-settings {
     background-repeat: no-repeat;
