--- a/app/components/skype-clone/template.hbs
+++ b/app/components/skype-clone/template.hbs
@@ -1,23 +1,38 @@
+{{skype-clone/messages
+  messages = messages}}
+
 <div class="users-list {{if isUsersContainerVisible "selected" ""}}" title="Click to view all shared screens and videos!" {{action "selectUsersList"}}>
   <div class="numbers-of-users">{{numberOfUsers}}</div>
   Users
 </div>
 
 <div class="main-input-box">
-  <textarea placeholder="Send a message"></textarea>
-
   <p id="who-is-typing"></p>
+
+  <textarea placeholder="Send a message"></textarea>
 
   <div class="controls">
     <i class="ii ii-webcam" {{action "toggleWebcam"}} disabled={{isWebcamDisabled}} title="Enable your webcam"></i>
     <i class="ii ii-microphone" {{action "toggleMic"}} disabled={{isMicDisabled}} title="Enable your microphone"></i>
     <i class="ii ii-monitor-multiple" {{action "toggleScreenSharing"}} disabled={{isScreenSharingDisabled}} title="Enable your screen"></i>
-    <i class="ii ii-file-send" {{action "toggleFileSharing"}} disabled={{isFileSharingDisabled}} title="Select and share your files"></i>
+    {{!-- <i class="ii ii-file-send" {{action "toggleFileSharing"}} disabled={{isFileSharingDisabled}} title="Select and share your files"></i> --}}
   </div>
 </div>
-
-{{yield}}
 
 {{#if isUsersContainerVisible}}
   <div class="users-container"></div>
 {{/if}}
+
+{{skype-clone/sound}}
+
+<div class="chat-window-settings">
+  {{#unless isDisplayingSettings}}
+    <i class="ii ii-settings" {{action "toggleDisplaySettings"}}></i>
+  {{else}}
+    {{#forms/modal-overlay
+        close = "closeSettingsPanel"}}
+      {{skype-clone/settings
+        rtcMultiConnection = rtcMultiConnection}}
+    {{/forms/modal-overlay}}
+  {{/unless}}
+</div>
