--- a/app/styles/chat.less
+++ b/app/styles/chat.less
@@ -3,22 +3,121 @@ video {
 }
 
 .chat-window {
-    border: 1px solid black;
-    margin: 20px;
+    margin: 0;
+    height: 100vh;
     position: fixed;
-    top: 0;
+    left: 0;
     right: 0;
     bottom: 0;
-    left: 0;
+    top: 0;
 }
 
-.chat-window-settings {
+.chat-window-content {
+    height: 75%;
+}
+
+.chat-window-messages {
+    float: left;
+    height: 100%;
+    width: 75%;
+    background-color: #ddd;
+}
+
+.chat-window-users-container {
+    background-color: #ccc;
+    float: right;
+    width: 25%;
+    height: 100%;
+}
+
+.chat-window-users-container-header {
+    display: flex;
+    font-size: 32px;
+    border-bottom: 1px solid black;
+}
+
+.chat-window-users-container-header-icons {
     position: absolute;
-    top: 0;
     right: 0;
 
-    .ii-settings {
-        font-size: 32px;
+    .ii {
         cursor: pointer;
+    }
+}
+
+.chat-window-input {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 25%;
+    background-color: #ddd;
+}
+
+.chat-window-input-textarea {
+    width: 100%;
+    height: 75%;
+    resize: none;
+    overflow-y: scroll;
+    padding: 0;
+    border-top: 1px solid gray;
+    border-left: none;
+    border-right: none;
+    font-size: 14px;
+    padding: 5px;
+
+    &:focus {
+        outline: 0;
+        background-color: #eee;
+    }
+}
+
+.chat-window-input-controls {
+    font-size: 24px;
+    padding: 12px 8px 10px 4px;
+    margin-top: -5px;
+
+    .ii {
+        padding: 5px;
+        cursor: pointer;
+
+        &:hover {
+            color: #eee;
+            background-color: gray;
+        }
+    }
+}
+
+.chat-window-input-send {
+    float: right;
+    margin-top: -2px;
+}
+
+.chat-window-input-send-button {
+    padding: 5px 10px;
+    font-size: 18px;
+    cursor: pointer;
+    background-color: #eee;
+    border: 1px solid #ccc;
+
+    &:focus {
+        outline: 0;
+    }
+}
+
+.chat-window-settings-panel {
+    padding: 10px 20px;
+}
+
+.chat-window-settings-panel-save-button {
+    text-align: center;
+    margin: 20px;
+    background-color: #eee;
+    padding: 10px 0;
+
+    button:focus {
+        font-size: 18px;
+        border: none;
+        background: inherit;
+        outline: 0;
     }
 }
