--- a/app/styles/skype_clone.less
+++ b/app/styles/skype_clone.less
@@ -1,3 +1,91 @@
+.main {
+    border: 1px solid black;
+    border-radius: 6px;
+}
+
+.new-message {
+    min-height: 7em;
+    border-top: 1px solid black;
+}
+
+.user-info {
+    width: 10em;
+    min-height: 7em;
+    float: left;
+    border-right: 1px solid black;
+    text-align: center;
+}
+
+.user-info img, .user-info video {
+    width: 100%;
+    height: 134px;
+}
+
+.user-info audio {
+    width: 100%;
+}
+
+.user-activity {
+    margin-left: 10em;
+    padding: .4em .8em;
+}
+
+// .users-list
+// {
+// 	padding: 5px 10px;
+// 	cursor: pointer;
+// 	display:inline-block;
+// 	color: #FDFDFD;
+// 	font-size: 20px;
+// 	color: black;
+// 	border: 1px solid rgba(231, 72, 50, 0.59);
+// 	border-radius: 2px;
+// 	background-color: rgba(204, 60, 25, 0.63);
+// }
+
+// .users-container
+// , .settings-panel
+// {
+//     margin: 0 0 13px 0;
+//     border: 1px solid black;
+//     overflow: hidden;
+//     overflow-x: auto;
+//     height: 180px;
+//     border-radius: 5px;
+//     display: none;
+// }
+//
+// .users-container video {
+//     height: 100%;
+// }
+
+.self-url {
+    position: absolute;
+    top: 5px;
+    left: 251px;
+    height: 25px;
+    overflow: hidden;
+}
+
+tr, td, th {
+    vertical-align: top;
+    padding: 10px 20px;//.7em 1.4em;
+    border-top: 1px dotted black;;
+    border-right: 1px dotted black;
+}
+
+table {
+    width: 100%;
+}
+
+#who-is-typing
+{
+	text-align: left;
+	position: absolute;
+	margin: 0 18px;
+	color: red;
+}
+
 /*
 // Muaz Khan         - www.MuazKhan.com
 // MIT License       - www.WebRTC-Experiment.com/licence
@@ -35,41 +123,10 @@ body {
     padding: 30px 30px;
 } */
 
-.main {
-    border: 1px solid black;
-    border-radius: 6px;
-}
-
-.new-message {
-    min-height: 7em;
-    border-top: 1px solid black;
-}
 
 /* .new-message:first-child {
     border-top: 0;
 } */
-
-.user-info {
-    width: 10em;
-    min-height: 7em;
-    float: left;
-    border-right: 1px solid black;
-    text-align: center;
-}
-
-.user-info img, .user-info video {
-    width: 100%;
-    height: 134px;
-}
-
-.user-info audio {
-    width: 100%;
-}
-
-.user-activity {
-    margin-left: 10em;
-    padding: .4em .8em;
-}
 
 /* .header {
 } */
@@ -78,11 +135,11 @@ body {
     padding: .6em .8em;
 } */
 
-.message img, .message iframe {
-    width: 64%;
-    border: 2px solid black;
-    border-radius: 5px;
-}
+// .message img, .message iframe {
+//     width: 64%;
+//     border: 2px solid black;
+//     border-radius: 5px;
+// }
 
 /* .main-input-box {
     border: 1px solid black;
@@ -105,18 +162,8 @@ body {
     background: transparent;
 } */
 
-button, .users-list
-{
-	padding: 5px 10px;
-	cursor: pointer;
-	display:inline-block;
-	color: #FDFDFD;
-	font-size: 20px;
-	color: black;
-	border: 1px solid rgba(231, 72, 50, 0.59);
-	border-radius: 2px;
-	background-color: rgba(204, 60, 25, 0.63);
-}
+// button,
+
 /* button:hover, .users-list:hover
 {
 	 background-color: rgba(204, 60, 25, 0.83);
@@ -126,46 +173,46 @@ button, .users-list
      background-color: rgba(204, 60, 25, 0.9);
 } */
 
-button[disabled], input[type=button][disabled] {
-    background-color: transparent;
-    border: 1px solid rgb(187, 181, 181);
-    color: gray;
-    text-shadow: none;
-}
+// button[disabled], input[type=button][disabled] {
+//     background-color: transparent;
+//     border: 1px solid rgb(187, 181, 181);
+//     color: gray;
+//     text-shadow: none;
+// }
+//
+// .icon {
+//     width: 50px;
+//     height: 50px;
+//     background-repeat: no-repeat;
+//     background-position: center center;
+// }
+//
+// #allow-webcam {
+//     background-image: url('images/webcam.png');
+// }
+//
+// #allow-mic {
+//     background-image: url('images/microphone.png');
+// }
+//
+// #allow-screen {
+//     background-image: url('images/screen.png');
+// }
+//
+// #share-files {
+//     background-image: url('images/share-files.png');
+// }
 
-.icon {
-    width: 50px;
-    height: 50px;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-#allow-webcam {
-    background-image: url('images/webcam.png');
-}
-
-#allow-mic {
-    background-image: url('images/microphone.png');
-}
-
-#allow-screen {
-    background-image: url('images/screen.png');
-}
-
-#share-files {
-    background-image: url('images/share-files.png');
-}
-
-#continue {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    background-repeat: no-repeat;
-    background-position: center right;
-    background-image: url('images/action-needed.png');
+// #continue {
+//     border-top-left-radius: 0;
+//     border-bottom-left-radius: 0;
+//     background-repeat: no-repeat;
+//     background-position: center right;
+//     background-image: url('images/action-needed.png');
     /* padding-right: 47px;
 	padding-top: 1px;
 	padding-bottom: 4px; */
-}
+// }
 
 /* a {
     color: #2844FA;
@@ -202,69 +249,45 @@ a:active {
     vertical-align: middle;
 } */
 
-h1 {
-    position: absolute;
-    color: rgb(10, 175, 253);
-    text-shadow: 1px 1px rgb(7, 129, 160);
-}
+// h1 {
+//     position: absolute;
+//     color: rgb(10, 175, 253);
+//     text-shadow: 1px 1px rgb(7, 129, 160);
+// }
+//
+// h1 img {
+//     width: 160px;
+//     height: 60px;
+// }
 
-h1 img {
-    width: 160px;
-    height: 60px;
-}
-
-.users-list {
-    position: absolute;
-    right: 63px;
-    padding: 0;
-    color: white;
-    margin-top: 0px;
-    width: 118px;
-    height: 110px;
-    cursor: default;
-    border-radius: 0;
-    border-top-right-radius: 20px;
-}
-
-.users-list.selected {
-    background-color: black;
-}
-
-.users-list img {
-    width: 82%;
-    height: 104px;
-}
-
-.numbers-of-users {
-    position: absolute;
-    font-size: 3em;
-    left: 38%;
-    top: 60px;
-}
-
-.users-container
-// , .settings-panel 
-{
-    margin: 0 0 13px 0;
-    border: 1px solid black;
-    overflow: hidden;
-    overflow-x: auto;
-    height: 180px;
-    border-radius: 5px;
-    display: none;
-}
-
-.users-container video {
-    height: 100%;
-}
-
-.self-url {
-    position: absolute;
-    top: 5px;
-    left: 251px;
-    height: 25px;
-    overflow: hidden;
-}
+// .users-list {
+//     position: absolute;
+//     right: 63px;
+//     padding: 0;
+//     color: white;
+//     margin-top: 0px;
+//     width: 118px;
+//     height: 110px;
+//     cursor: default;
+//     border-radius: 0;
+//     border-top-right-radius: 20px;
+// }
+//
+// .users-list.selected {
+//     background-color: black;
+// }
+//
+// .users-list img {
+//     width: 82%;
+//     height: 104px;
+// }
+//
+// .numbers-of-users {
+//     position: absolute;
+//     font-size: 3em;
+//     left: 38%;
+//     top: 60px;
+// }
 
 // .settings {
 //     position: absolute;
@@ -280,13 +303,13 @@ h1 img {
 //     margin-top: -1px;
 // }
 
-#save-settings {
-    background-repeat: no-repeat;
-    background-position: center right;
-    background-image: url('images/accepted.png');
-    padding-right: 53px;
-    border-color: rgb(133, 21, 21);
-}
+// #save-settings {
+//     background-repeat: no-repeat;
+//     background-position: center right;
+//     background-image: url('images/accepted.png');
+//     padding-right: 53px;
+//     border-color: rgb(133, 21, 21);
+// }
 
 /* .settings-panel {
     height: auto;
@@ -294,58 +317,40 @@ h1 img {
     padding: .4em .8em;
 } */
 
-strong {
-    color: rgb(204, 14, 14);
-    font-family: inherit;
-    font-weight: normal;
-}
+// strong {
+//     color: rgb(204, 14, 14);
+//     font-family: inherit;
+//     font-weight: normal;
+// }
 
-tr, td, th {
-    vertical-align: top;
-    padding: .7em 1.4em;
-    border-top: 1px dotted #BBA9A9;
-    border-right: 1px dotted #BBA9A9;
-}
+// h1, h2 {
+//     border-bottom: 1px solid rgb(189, 189, 189);
+//     display: inline;
+//     font-weight: normal;
+//     line-height: 36px;
+//     padding: 0 0 3px 0;
+// }
 
-table {
-    width: 100%;
-}
+// select {
+//     border: 1px solid #d9d9d9;
+//     border-radius: 1px;
+//     padding: .4em .4em;
+//     margin-top: 5px;
+// }
 
-h1, h2 {
-    border-bottom: 1px solid rgb(189, 189, 189);
-    display: inline;
-    font-weight: normal;
-    line-height: 36px;
-    padding: 0 0 3px 0;
-}
+// label.adjust-width {
+//     display: inline-block;
+//     width: 30%;
+// }
 
-select {
-    border: 1px solid #d9d9d9;
-    border-radius: 1px;
-    padding: .4em .4em;
-    margin-top: 5px;
-}
+// small {
+//     display: inline-block;
+//     vertical-align: middle;
+// }
 
-label.adjust-width {
-    display: inline-block;
-    width: 30%;
-}
-
-small {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.smiley {
-    width: 20px!important;
-    height: 20px;
-    border: 0!important;
-    vertical-align: middle;
-}
-#who-is-typing
-{
-	text-align: left;
-	position: absolute;
-	margin: 0 18px;
-	color: red;
-}
+// .smiley {
+//     width: 20px!important;
+//     height: 20px;
+//     border: 0!important;
+//     vertical-align: middle;
+// }
