Messages div is looking good

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -35,5 +35,6 @@
 </div>
 {{else}}
   {{skype-clone
-    rtcMultiConnection = rtcMultiConnection}}
+    rtcMultiConnection = rtcMultiConnection
+    isShiftKeyPressed = isShiftKeyPressed}}
 {{/unless}}
