--- a/app/components/skype-clone/template.hbs
+++ b/app/components/skype-clone/template.hbs
@@ -1,18 +1,18 @@
 <div class="chat-window-content">
   <div class="chat-window-messages">
     {{#each messages as |args|}}
-      <div class="new-message">
-        <div class="user-info">{{args.userinfo}} || '<img src="images/user.png">'</div>
-        <div class="user-activity">
-          <h2 class="header">{{args.header}}</h2>
-          <p class="message">{{args.message}}</p>
-        </div>
+      <div class="chat-window-message">
+        <span class="chat-window-message-user">{{args.header}}</span>
+        <div class="chat-window-message-text">{{{args.message}}}</div>
+        {{!-- {{log "args.userinfo" args.userinfo}} --}}
+        {{!-- <div class="chat-window-message-user">{{args.header}}</div>
+        <div class="chat-window-message-text">{{args.message}}</div> --}}
       </div>
     {{/each}}
     {{!-- on init of new message: document.querySelector('#message-sound').play(); --}}
     {{!-- {{skype-clone/sound}} --}}
 
-    <p id="who-is-typing"></p>
+    {{!-- <p id="who-is-typing"></p> --}}
   </div>
 
   <div class="chat-window-users-container">
@@ -33,7 +33,12 @@
 </div>
 
 <div class="chat-window-input">
-  <textarea class="chat-window-input-textarea" placeholder="Send a message"></textarea>
+  {{textarea
+      value=newMessageValue
+      classNames="chat-window-input-textarea"
+      placeholder="Send a message"
+      keyUp=(action "sendMessage")
+      keyDown=(action "scrollMessages")}}
 
   <div class="chat-window-input-controls">
     <i class="ii ii-webcam" {{action "toggleWebcam"}} disabled={{isWebcamDisabled}} title="Enable your webcam"></i>
