--- a/app/styles/skype_clone.less
+++ b/app/styles/skype_clone.less
@@ -25,10 +25,10 @@
     width: 100%;
 }
 
-.user-activity {
-    margin-left: 10em;
-    padding: .4em .8em;
-}
+// .user-activity {
+//     margin-left: 10em;
+//     padding: .4em .8em;
+// }
 
 // .users-list
 // {
