--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -36,5 +36,6 @@
 {{else}}
   {{skype-clone
     rtcMultiConnection = rtcMultiConnection
+    roomname = roomname
     isShiftKeyPressed = isShiftKeyPressed}}
 {{/unless}}
