--- a/app/styles/chat.less
+++ b/app/styles/chat.less
@@ -16,6 +16,13 @@ video {
     height: 75%;
 }
 
+.chat-window-roomname {
+    font-size: 18px;
+    background-color: #ccc;
+    padding: 2px 10px;
+    height: 24px;
+}
+
 .chat-window-messages {
     float: left;
     height: 100%;
@@ -28,23 +35,12 @@ video {
     position: relative;
     font-size: 16px;
     cursor: default;
-    padding: 5px 20px 5px 5px;
+    padding: 2px 10px 2px 2px;
     height: auto;
-
-    &:nth-child(2n+1) {
-        background-color: #eee;
-    }
-
-    &:nth-child(2n) {
-        background-color: #ddd;
-    }
 }
 
 .chat-window-message-user {
     display: block;
-    margin-bottom: 5px;
-    padding-top: 2px;
-    padding-left: 2px;
 }
 
 .chat-window-message-text {
@@ -65,9 +61,11 @@ video {
 }
 
 .chat-window-users-container-header {
+    height: 24px;
     display: flex;
-    font-size: 32px;
-    border-bottom: 1px solid black;
+    font-size: 18px;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
 
 .chat-window-users-container-header-icons {
@@ -76,6 +74,7 @@ video {
 
     .ii {
         cursor: pointer;
+        font-size: 32px;
     }
 }
 
