Cleanup UI, code

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -36,6 +36,5 @@
 {{else}}
   {{skype-clone
     rtcMultiConnection = rtcMultiConnection
-    roomname = roomname
-    isShiftKeyPressed = isShiftKeyPressed}}
+    roomname = roomname}}
 {{/unless}}
