--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -8,8 +8,7 @@
         type="text"
         value=roomname
         placeholder="Channel Name"
-        title="Channel name (required)"
-        keyDown=(action "keyDown")}}
+        title="Channel name (required)"}}
     </div>
 
     <div class="channel-form-username">
